--- a/css/manoj-css/style.1.css
+++ b/css/manoj-css/style.1.css
@@ -59,8 +59,21 @@ nav > ul {
 nav > ul > li, nav > ul > li > a {
 	cursor: pointer;
 }
+nav ul.menu-trigger > li , nav  ul.menu-trigger > li > a {
+	cursor: pointer;
+}
+.menu > ul > li , .menu > ul > li > a {
+	cursor: pointer;
+}
 ul > li.label {
 	cursor: default !important;
+}
+
+div.messages > div.message {
+	border: 2px solid red;
+	margin:4px;
+	padding:4px;
+	overflow: auto;
 }
 
 /* header */
@@ -406,7 +419,11 @@ section.gallery.wide {
 }
 
 /* thumbnails */
-.FigureBox {
+.FigureBox figcaption {
+	line-height: 1.2;
+}
+
+.FigureBox.Photo {
 	padding: 2px;
 	overflow: hidden;
 	border: 1px solid #e5e5e5;
@@ -419,41 +436,41 @@ section.gallery.wide {
 	background-color: #FFF;
 }
 
-.FigureBox .selected {
+.FigureBox.Photo .selected {
 	position: absolute;
 	top: 0px;
 	right: 0px;
 	width: auto;
 }
-.FigureBox:hover {
+.FigureBox.Photo:hover {
 	background: #fff88a;
 }
-.FigureBox.focus {
+.FigureBox.Photo.focus {
 	background: #fff88a;
 }
 
 
-.FigureBox ul {
-	list-style: none;
+.FigureBox.Photo ul.extras {
+	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
 }
-.FigureBox ul li {
+.FigureBox.Photo .extras li {
 	float: left;
 	margin: 5px 4px 0 0;
 }
-.FigureBox ul li img {
+.FigureBox.Photo .extras li img {
 	float: left;
 }
 
-.FigureBox ul li.rating {
+.FigureBox.Photo .extras li.rating {
 	padding: 2px 0 0 0;
 }
-.FigureBox ul li.rating > img {
+.FigureBox.Photo .extras li.rating > img {
 	width: 13px;
 	height: 12px;
 }
-.FigureBox ul li.score {
+.FigureBox.Photo .extras li.score {
 	font-size: 11px;
 	background: -moz-linear-gradient(bottom, #eeeeee, #fff);
 	background: -webkit-gradient(linear, center bottom, center top, from(#eeeeee), to(#fff));
@@ -467,14 +484,14 @@ section.gallery.wide {
 	font-family: Arial, Helvetica, sans-serif;
 	cursor: default;
 }
-.FigureBox ul li.icon {
+.FigureBox.Photo .extras li.icon {
 	float:right;
 }
-.FigureBox ul li.info > img {
+.FigureBox.Photo .extras li.info > img {
 	width: 16px;
 	height: 17px;
 }
-.FigureBox ul li.context-menu > img {
+.FigureBox.Photo .extras li.context-menu > img {
 	width: 15px;
 	height: 16px;
 }
@@ -482,11 +499,11 @@ section.gallery.wide {
 /*
  * .lm landscape/medium
  */
-.FigureBox.lm {
+.FigureBox.Photo.lm {
 	width: 145px;		
 	height: 120px;	
 }
-.FigureBox.lm > figure > img {
+.FigureBox.Photo.lm > figure > a > img {
 	width: 144px;
 	height: 96px;
 }
@@ -495,81 +512,76 @@ section.gallery.wide {
  * .ll (landscape/large) == .large 
  */
 
-.FigureBox.ll > figure > img {
+.FigureBox.Photo.ll > figure > a > img {
 	width: 222px;
 	height: 148px;
 }
 /*
  * .sq (square) 
  */
-.FigureBox.sq > figure > img {
+.FigureBox.Photo.sq > figure > a > img {
 	width: 75px;
 	height: 75px;
 }
 
-
-.FigureBox.lbx-tiny {
-	width:33px;
-	height:33px;
-	padding:3px;
-	overflow:hidden;
-	border:none;
-	border-radius:0px;
-	-moz-border-radius:0px;
-	-webkit-border-radius:0px;
-	float:left;
-	margin:0;
-	position:relative;
-}
-
-.FigureBox.lbx-tiny > figure {
-	width:33px;
-	height:33px;
-}
-
-.FigureBox.lbx-tiny > figure > img {
-	width:33px;
-	height:33px;
-}
-
 /*temp CSS for selected*/
-.FigureBox.selected {
-	border: 2px solid red;
-	padding: 1px;
+.FigureBox.Photo.selected {
+	border: 2px solid red !important;
+	padding: 1px !important;
 }
+
+.FigureBox.Photo .label {
+	font-size: 8pt;
+	padding-top: 2px;
+	text-align: center;
+}
+
 
 /* Hidden Shot icons */
-.FigureBox div.hidden-shot {
+.FigureBox.Photo > figure {
+	position: relative;
+}
+
+.FigureBox.Photo.lbx-tiny div.hidden-shot {
+	display: none;
+}
+
+.FigureBox.Photo div.hidden-shot {
 	background: url(../images/icon-hidden-shot-null.png) no-repeat scroll ;
 	position: absolute;
-	right: 5px;
-	bottom: 29px;
+	right: 4px;
+	bottom: 5px;
 	width: 32px;
 	height: 18px;
 	cursor: pointer;
 }
-.FigureBox div.hidden-shot.c2 {
+.FigureBox.Photo.ll div.hidden-shot {
+	bottom: 20px;
+}
+
+.FigureBox.Photo div.hidden-shot.c2 {
 	background: url(../images/icon-hidden-shot-2.png) no-repeat scroll ;
 }
-.FigureBox div.hidden-shot.c3 {
+.FigureBox.Photo div.hidden-shot.c3 {
 	background: url(../images/icon-hidden-shot-3.png) no-repeat scroll ;
 }
-.FigureBox div.hidden-shot.c4 {
+.FigureBox.Photo div.hidden-shot.c4 {
 	background: url(../images/icon-hidden-shot-4.png) no-repeat scroll ;
 }
-.FigureBox div.hidden-shot.c5 {
+.FigureBox.Photo div.hidden-shot.c5 {
 	background: url(../images/icon-hidden-shot-5.png) no-repeat scroll ;
 }
-.FigureBox div.hidden-shot.c6 {
+.FigureBox.Photo div.hidden-shot.c6 {
 	background: url(../images/icon-hidden-shot-6.png) no-repeat scroll ;
 }
-.FigureBox.hiddenshot-hide {
+.FigureBox.Photo.hiddenshot-hide {
     display: none;
 }
 section.gallery.hiddenshots {
 	padding: 4px 0;
 }
-section.gallery.hiddenshots .FigureBox.hiddenshot-hide {
+
+section.gallery.hiddenshots .FigureBox.Photo.hiddenshot-hide {
 	display: block;
 }
 /* ok to here ^^^ */
@@ -620,14 +632,11 @@ div.ratingGroup.r5 {
     background-position: 0 0;
 }
 
-section {
+/*section {
 	overflow-x: hidden;
-}
+}*/
 
-
-
-
-div.ratingGroup{
+/*div.ratingGroup{
 	z-index:auto;
 }
 
@@ -635,8 +644,7 @@ div.ratingGroup{
 ul.photo-roll {
 	overflow-x: hidden;
 	margin: 0 auto;
-}
-
+}*/
 
 #related-content {
 	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(197,232,250)),color-stop(1, rgb(232,246,253))	);
@@ -699,6 +707,19 @@ ul.photo-roll {
 	height: 22px;
 	display: table-cell
 }
+
+/*.tabbed-area div div {
+	padding: 20px;
+	min-height: 250px;
+	position: absolute;
+	top: -1px;
+	left: 0;
+	width: 100%;
+}
+.tabbed-area div div, .tabs li a {
+	border-top: 1px solid #8bc3e4;
+}*/
+
 #related-content aside .people {
 	margin-bottom: 30px;
 	display: block;
@@ -785,12 +806,12 @@ ul.photo-roll {
 
 .menu li a {
 	display: block;
-	padding: 2px 5px;
+	padding: 0 5px;
 	text-decoration: none;
 	color: #000;
 }
 
-.menu li a:hover {
+.menu li:hover, .menu li a:hover {
 	background: #ccc;
 }
 
@@ -816,7 +837,7 @@ div.yui3-dd-drop-active-valid {
 /*  LIGHTBOX */
 div.anchor-bottom {
 	position: fixed;
-	bottom: 0;
+	bottom: 20px;
 	width: 100%;
 	
 }
@@ -833,41 +854,32 @@ section#lightbox .header {
 	overflow: hidden;
 }
 section#lightbox .header ul {
-	overflow:hidden;
-	display: inline-block;
+	xoverflow:hidden;
+	xdisplay: inline-block;
 	line-height: 24px;
 	font-size: 10pt;
 }
 section#lightbox .header > ul > li {
 	padding-top: 3px;
 }
-section#lightbox .header ul li {
-	height: 30px;
+section#lightbox .header .toolbar > div {
+	display:inline-block;
 }
-section#lightbox h3 {
-	color:#747759;
-	padding: 4px 0;
+section#lightbox .header .toolbar ul {
 }
-section#lightbox h4 {
+section#lightbox .header .count {
+	display: inline-block;
 	font-size: 0.9em;
-	padding: 5px 0;
+	padding-left: 4px;
+}
+section#lightbox .toolbar ul li {
+	height: 32px;
 }
 section#lightbox .window-options > ul {
 	display: inline-block;
-	margin-left: 10px
+	margin-left: 10px;
+	line-height: 24px;
 }
-section#lightbox .window-options a {
-	display: inline-block;
-	width: 18px;
-	height: 20px;
-}
-section#lightbox .window-options a.window-min {
-	background: url(../images/img_zoomin.gif) no-repeat scroll center;
-}
-section#lightbox .window-options a.window-max {
-	background: url(../images/img_zoomout.gif) no-repeat scroll center;
-}
-
 section#lightbox .toolbar {
 	margin-bottom: -1px;
 	}
@@ -886,7 +898,8 @@ section#lightbox .toolbar ul li{
 section#lightbox .toolbar ul li a{color:#000; font-size:11px;}
 
 section#lightbox .toolbar ul li.none{
-	background:none;}
+	background:none;
+}
 
 section#lightbox .gallery.photo {
 	border:1px solid #bdbcbd;
@@ -920,40 +933,209 @@ section#lightbox  ul.thumb-size li.btn {
 	height: 24px;
 }
 section#lightbox section.gallery.lightbox {
-	xline-height: 56px;
-	xheight: 56px !important;
 	padding: 0;
 	margin-bottom: 1px;
-	xoverflow: hidden;
 }
-section#lightbox .gallery.lightbox nav {
-	display: inline-block;
-	width: 16px;
-	line-height: 39px;
-	vertical-align: top;
-	background: #E1E9A0;
-	color: #000;
-	border: 1px solid #BDBCBD;
-	font-weight: bold;
-	padding-left: 4px;
-	cursor: pointer;
+
+/*
+ * filmstrip CSS
+ */
+.gallery .filmstrip-wrap {
+	
 }
-section#lightbox .gallery.lightbox nav.prev {
-	-moz-border-radius: 5px 0 0 5px;
-	-webkit-border-radius: 5px 0 0 5px;
-}
-section#lightbox .gallery.lightbox nav.next {
-	-moz-border-radius: 0 5px 5px 0;
-	-webkit-border-radius: 0 5px 5px 0;
-}
-section#lightbox .gallery.lightbox > .filmstrip {
-	width: 896px;
-	xheight: 56px;
+.gallery .filmstrip-wrap .filmstrip {
+/*	fixed filmstrip width to fill .filmstrip.wrap, sets HScroll on overflow */
+	width: 100%;
+/*	add Hscroll if .filmstrip.container width > .filmstrip width */
 	overflow-x: auto;
-	overflow-y: hidden;
+/*	height needs to expand to accommodate Hscrollbar*/
+	height: auto;
+	display:inline-block;
+	min-height: 39px;
+}
+.gallery .filmstrip-wrap .filmstrip > .container {
 	display:inline-block;
 }
-section#lightbox .gallery.lightbox div.container {
-	display: inline-block;
-	width: 1000px;
+
+/*	lightbox filmstrip:  */
+.gallery.lightbox div.container {
+/*	this value must be set in javascript to accomodate the count of thumbnails*/
+	width: auto;
 }
+
+
+
+
+.gallery .filmstrip .FigureBox.Photo.lbx-tiny {
+	width:33px;
+	height:33px;
+	padding:3px;
+	overflow:hidden;
+	border:none;
+	border-radius:0px;
+	-moz-border-radius:0px;
+	-webkit-border-radius:0px;
+	float:left;
+	margin:0;
+	position:relative;
+}
+.gallery .filmstrip .FigureBox.Photo.lbx-tiny > figure {
+	width:33px;
+	height:33px;
+}
+.gallery .filmstrip .FigureBox.Photo.lbx-tiny > figure > img {
+	width:33px;
+	height:33px;
+}
+
+.gallery .filmstrip .FigureBox.Photo {
+	margin: 0;
+}
+
+/*	hiddenShot-filmstrip:  */
+
+
+
+/*
+ * forms
+ */
+form input[type='text'].help {
+	color: gray;
+}
+
+/*
+ * toolbar
+ */
+.toolbar input[type='checkbox'] {
+	vertical-align: text-bottom;
+}
+.toolbar .menu-open {
+	padding-right: 10px;
+}
+.gallery-header .toolbar input[type='checkbox'] {
+	vertical-align: text-top;
+}
+/*
+ * menus
+ */
+.menu li.disabled {
+	cursor: default;
+	color: gray;
+	background-color: lightgray;
+}
+
+.menu li.selected {
+	background: url(../images/arrow.png) no-repeat left center;
+	padding-left: 10px;
+}
+
+/*
+ * dialogs
+ */
+.aui-dialog-bd .selected {
+	border: 2px solid red !important; 
+}
+
+ul.circle-thumb li.selected {
+	margin-right:16px;
+	margin-bottom:8px;
+}
+/*replaces ul.circle-thumb li.selected */
+.FigureBox.Group.selected { 
+	margin-right:16px;
+	margin-bottom:8px;
+}
+
+.dialog-vert-select li {
+	border: 2px solid transparent;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;	
+	margin: 10px 10px 0 10px;
+	padding: 4px 4px 4px 24px;
+	list-style-type: none;
+	cursor: pointer;
+}
+.dialog-vert-select li > div {
+	display: inline-block;
+	font-size: 10pt;
+	vertical-align: text-top;
+	width: 285px;
+}
+.dialog-vert-select li > div.term {
+	width: 120px;
+}
+
+.dialog-vert-select li:hover {
+	border: 2px solid gray;
+} 
+
+
+/*
+ * Group/Circle thumbnails
+ */
+.FigureBox.Group {
+	margin-bottom: 10px;
+	overflow: hidden;
+	display: inline-block;
+	vertical-align: top;
+}
+.FigureBox.Group figure {
+	font-size: 10pt;
+/*	thumbnail height */
+	xheight: 83px;
+}
+
+.FigureBox.Group figure > a > img {
+	border: 4px solid #fff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-box-shadow: 0px 0px 20px #afb4b6;
+	-moz-box-shadow: 0px 0px 20px #afb4b6;
+	margin: 0px 4px 4px 0px;
+	vertical-align: top;
+}
+.FigureBox.Group  figcaption {
+	display: inline-block;
+	padding: 2px 0;
+/*	controls wrap for .extras.description*/
+	width: 215px;	
+}
+.FigureBox.Group  figcaption .extras li a {
+    color: #404040;
+    font-size: 11px;
+    font-weight: normal;
+    line-height: 18px;
+    text-decoration: none;
+}
+.FigureBox.Group .label {
+	
+	text-align: left;
+}
+.FigureBox.Group .description {
+	font-size: 0.8em;
+}
+.FigureBox.Group .extras li {
+	display: inline;
+	border-right: 1px solid #404040;
+	padding: 0 5px;
+}
+.FigureBox.Group .extras li.last {
+	border-right: none;
+}
+.FigureBox.Group .extras li.icon {
+	padding-left: 15px;
+}
+
+.FigureBox.Group li.privacy.public {
+	background: url(../images/lock.png) no-repeat left;
+}
+.FigureBox.Group li.privacy.listing {
+	background: url(../images/lock.png) no-repeat left;
+}
+.FigureBox.Group li.privacy.members {
+	background: url(../images/lock.png) no-repeat left;
+}
+.FigureBox.Group li.privacy.admin {
+	background: url(../images/lock.png) no-repeat left;
+}
+
